{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 34,
  "lineage": "403ccc20-227a-bf30-1003-f142389741fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01472167d55f47a10",
            "arn": "arn:aws:ec2:us-east-1:133197206805:elastic-ip/eipalloc-01472167d55f47a10",
            "association_id": "eipassoc-038d58c6db7e84719",
            "domain": "vpc",
            "id": "eipalloc-01472167d55f47a10",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0092e8e1a5d132716",
            "private_dns": "ip-10-0-1-137.ec2.internal",
            "private_ip": "10.0.1.137",
            "public_dns": "ec2-3-226-136-254.compute-1.amazonaws.com",
            "public_ip": "3.226.136.254",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "healthpulse-nat-eip"
            },
            "tags_all": {
              "Name": "healthpulse-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "eipalloc-01472167d55f47a10",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133197206805:internet-gateway/igw-0641939bf80fa823f",
            "id": "igw-0641939bf80fa823f",
            "owner_id": "133197206805",
            "region": "us-east-1",
            "tags": {
              "Name": "healthpulse-igw"
            },
            "tags_all": {
              "Name": "healthpulse-igw"
            },
            "vpc_id": "vpc-0249eead7ac9eac72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "igw-0641939bf80fa823f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01472167d55f47a10",
            "association_id": "eipassoc-038d58c6db7e84719",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-072e6d79319aa93b1",
            "network_interface_id": "eni-0092e8e1a5d132716",
            "private_ip": "10.0.1.137",
            "public_ip": "3.226.136.254",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0360709ba3e3b81b9",
            "tags": {
              "Name": "healthpulse-nat"
            },
            "tags_all": {
              "Name": "healthpulse-nat"
            },
            "vpc_id": "vpc-0249eead7ac9eac72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "nat-072e6d79319aa93b1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133197206805:route-table/rtb-0f196b395c80b9c4b",
            "id": "rtb-0f196b395c80b9c4b",
            "owner_id": "133197206805",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-072e6d79319aa93b1",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "healthpulse-private-rt"
            },
            "tags_all": {
              "Name": "healthpulse-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0249eead7ac9eac72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "rtb-0f196b395c80b9c4b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133197206805:route-table/rtb-00121e025f89b606c",
            "id": "rtb-00121e025f89b606c",
            "owner_id": "133197206805",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0641939bf80fa823f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "healthpulse-public-rt"
            },
            "tags_all": {
              "Name": "healthpulse-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0249eead7ac9eac72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "rtb-00121e025f89b606c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e41dbcc0229032de",
            "region": "us-east-1",
            "route_table_id": "rtb-0f196b395c80b9c4b",
            "subnet_id": "subnet-07d2ecdb0fa83c357"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "rtbassoc-0e41dbcc0229032de",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f510bac71b6de991",
            "region": "us-east-1",
            "route_table_id": "rtb-0f196b395c80b9c4b",
            "subnet_id": "subnet-09f0238834a3d7262"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "rtbassoc-0f510bac71b6de991",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2484084ebbd5d08",
            "region": "us-east-1",
            "route_table_id": "rtb-00121e025f89b606c",
            "subnet_id": "subnet-0360709ba3e3b81b9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "rtbassoc-0d2484084ebbd5d08",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0109c790af06f70fd",
            "region": "us-east-1",
            "route_table_id": "rtb-00121e025f89b606c",
            "subnet_id": "subnet-0fd9581f8e24c7fc5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "rtbassoc-0109c790af06f70fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133197206805:security-group/sg-090d9cdb9b6e21d79",
            "description": "Security group for HealthPulse load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090d9cdb9b6e21d79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "healthpulse-alb-sg",
            "name_prefix": "",
            "owner_id": "133197206805",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "healthpulse-alb-sg"
            },
            "tags_all": {
              "Name": "healthpulse-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0249eead7ac9eac72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "sg-090d9cdb9b6e21d79",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133197206805:security-group/sg-08ac4973503815b96",
            "description": "Security group for HealthPulse EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ac4973503815b96",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node-to-node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "healthpulse-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "133197206805",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "healthpulse-eks-nodes-sg"
            },
            "tags_all": {
              "Name": "healthpulse-eks-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0249eead7ac9eac72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "sg-08ac4973503815b96",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133197206805:subnet/subnet-07d2ecdb0fa83c357",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d2ecdb0fa83c357",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133197206805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "healthpulse-private-1"
            },
            "tags_all": {
              "Name": "healthpulse-private-1"
            },
            "vpc_id": "vpc-0249eead7ac9eac72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "subnet-07d2ecdb0fa83c357",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133197206805:subnet/subnet-09f0238834a3d7262",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f0238834a3d7262",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133197206805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "healthpulse-private-2"
            },
            "tags_all": {
              "Name": "healthpulse-private-2"
            },
            "vpc_id": "vpc-0249eead7ac9eac72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "subnet-09f0238834a3d7262",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133197206805:subnet/subnet-0360709ba3e3b81b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0360709ba3e3b81b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133197206805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "healthpulse-public-1"
            },
            "tags_all": {
              "Name": "healthpulse-public-1"
            },
            "vpc_id": "vpc-0249eead7ac9eac72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "subnet-0360709ba3e3b81b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133197206805:subnet/subnet-0fd9581f8e24c7fc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd9581f8e24c7fc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133197206805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "healthpulse-public-2"
            },
            "tags_all": {
              "Name": "healthpulse-public-2"
            },
            "vpc_id": "vpc-0249eead7ac9eac72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "subnet-0fd9581f8e24c7fc5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:133197206805:vpc/vpc-0249eead7ac9eac72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03b1233a2d65ed014",
            "default_route_table_id": "rtb-06439b4905b5806c0",
            "default_security_group_id": "sg-0a2531c743d69d4b9",
            "dhcp_options_id": "dopt-07d9ecf3ace709cb3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0249eead7ac9eac72",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06439b4905b5806c0",
            "owner_id": "133197206805",
            "region": "us-east-1",
            "tags": {
              "Name": "healthpulse-vpc"
            },
            "tags_all": {
              "Name": "healthpulse-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133197206805",
            "id": "vpc-0249eead7ac9eac72",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}